[gd_scene load_steps=3 format=3 uid="uid://cekseoerj8xp0"]

[ext_resource type="Script" uid="uid://cmqpe88pabp0k" path="res://scripts/gui_trigger.gd" id="1_uw2au"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uw2au"]

[node name="gui_trigger" type="Area2D"]
script = ExtResource("1_uw2au")

[node name="TriggerArea" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uw2au")

[node name="GuiPosition" type="Marker2D" parent="."]
position = Vector2(0, 23)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
